@@ -1,4 +1,4 @@
-$NetBSD: CHANGES,v 1.7724 2004/11/05 21:16:57 wiz Exp $
+$NetBSD: CHANGES,v 1.7725 2004/11/05 21:38:08 jdolecek Exp $
 
 Changes to the packages collection and infrastructure in 2004:
 
@@ -5106,3 +5106,4 @@ Changes to the packages collection and infrastructure in 2004:
 	Added libvisual-0.1.7 [wiz 2004-11-05]
 	Added libvisual-bmp-0.1.0 [wiz 2004-11-05]
 	Added libvisual-plugins-0.1.7 [wiz 2004-11-05]
+	Added php5-xsl 5.0.2 [jdolecek 2004-11-05]
